--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,11 @@ services:
 
   localstack:
     image: localstack/localstack:1.3.1
+    environment:
+      - PERSISTENCE=1
+    volumes:
+      - localstack:/var/lib/localstack
     ports: ['4566:4566']
+
+volumes:
+  localstack:
